name: ghcjs-demo
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  js-sources: jsbits/anything.js
  hs-source-dirs: src
  build-depends:  base
                , ghcjs-dom
                , lucid
                , deepseq
                , streamly
                , mtl
  exposed-modules:
    Lib
    Hello
    AcidRain
  ghc-options: -Wall

executable ghcjs-demo
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:  base
                , ghcjs-demo
